# CleanBookmarks

./: .gitignore  .gitmessage  BUGFIX_COMPLETION_REPORT.md  CLAUDE.md  COMMAND_FIX_REPORT.md  FINAL_COMPLETION_REPORT.md  IMPLEMENTATION_REPORT.md  LICENSE  PERFORMANCE_OPTIMIZATION_REPORT.md  QWEN.md  README.md  README_advanced.md  README_en.md  README_v2.md  README_zh.md  config.json  config_advanced.json  config_simple.json  config_temp.json  demo_system.py  gemini.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_advanced.txt  test_implementation.py
.claude/: settings.local.json
changelog/: 2025-09-15_llm_emoji_refactor.md  2025-09-15_packaging_cli_refactor.md  2025-10-20-docs-cleanup.md  2025-10-20-phase1.md  2025-10-20-phase2.md  2025-12-14-add-ci-and-dev-requirements.md  2025-12-14-config-manager-watchdog-optional.md  2025-12-14-enhanced-classifier-import-fix.md  2025-12-14-full-stack-default-deps-python310.md  2025-12-14-pyproject-deps-version-pins.md  2025-12-14-test-suite-optional-imports.md  2025-12-14-test-suite-pytest-optional.md  2025-12-15-ml-classifier-warning-noise-reduction.md  2025-12-18-cli-category-normalization.md  2025-12-18-cli-interface-feature-completion.md  2025-12-18-enhanced-classifier-ml-availability-guard.md  2025-12-18-performance-monitor-bridge-and-output-order.md  2025-12-19-threshold-and-rule-engine-extensions.md
cleanbook/: cli.py
doc/: bookmark_best_practices.md  bookmark_best_practices_zh.md  ml_design_zh.md
docs/: DESIGN.md  WORKFLOW_GUIDE.md  quickstart_zh.md  technical_report.md
examples/: bookmarks.html  bookmarks.md  bookmarks_cleaned.html  demo_bookmarks.html
models/: recommendation.pkl
output/: bookmarks_20250729_164601.html  bookmarks_20250729_164601.json  report_20250729_164601.md
src/: __init__.py  advanced_classifier.py  advanced_clean_tidy.py  advanced_features.py  ai_classifier.py  bookmark_processor.py  clean&tidy.py  cli_interface.py  config_manager.py  emoji_cleaner.py  enhanced_classifier.py  enhanced_clean_tidy.py  enhanced_cli.py  health_checker.py  llm_classifier.py  llm_organizer.py  llm_prompt_builder.py  ml_classifier.py  performance_optimizer.py  placeholder_modules.py  rule_engine.py  taxonomy_standardizer.py
taxonomy/: resource_types.yaml  subjects.yaml
tests/: test_cleaner.py  test_suite.py  (+1 more)
(+26 files in other folders)
