[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cleanbook"
version = "0.1.0"
description = "智能书签清理与分类：规则+ML+LLM（可选）"
authors = [{ name = "LessUp" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["bookmarks", "classification", "clean", "ai", "llm"]
license = { text = "MIT" }

# 运行依赖（与 requirements.txt 对齐，尽量精简）
dependencies = [
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.2",
  "numpy>=1.26.4",
  "scikit-learn>=1.4.2",
  "jieba>=0.42.1",
  "langdetect>=1.0.9",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.2",
  "pandas>=2.2.2",
  "requests>=2.32.3",
  "tqdm>=4.66.4",
  "click>=8.1.7",
  "psutil>=6.0.0",
  "joblib>=1.4.2",
  "watchdog>=4.0.2",
  "pyyaml>=6.0.2",
  "jsonschema>=4.23.0",
  "rich>=13.7.1",
  "pytest>=8.2.2",
  "pytest-cov>=5.0.0",
  "chardet>=5.2.0",
  "urllib3>=2.2.2"
]

[project.urls]
Homepage = "https://github.com/yourname/CleanBookmarks"

[project.scripts]
# 命令入口（推荐 pipx 安装后直接使用）
cleanbook = "src.cleanbook.cli:main"
cleanbook-wizard = "src.enhanced_cli:main"

[tool.setuptools]
# 包含包和独立模块
py-modules = ["main"]
packages = ["src", "src.cleanbook"]

[tool.setuptools.package-data]
# 打包模型与配置（如需）
"src" = ["**/*.pkl", "**/*.json"]
